# LynchStreamlit

./: .gitignore  README.md  app.py  pyproject.toml
data/processed/: augmented_training_data.csv  clean_training_data.csv  final_augmented_data.csv
data/raw/: One_Up_On_Wall_Street_QandA_Full.csv  navigator_ft-6748e9cd1cdbe50f6a3f0afd-data.csv
data/testing/: new_testing.csv  testing.csv
notebooks/: Transformer-final copy.ipynb  Transformer-final.ipynb  Transformer.ipynb
scripts/: augment_data.py  clean_data.py  evaluate_metrics.py  train_model.py
src/lynchstreamlit/: Transformer.py
